src/strucvars/aggregate/snapshots/varfish_server_worker__strucvars__aggregate__cli__tests__run_smoke_gts_path.snap
---
source: src/strucvars/aggregate/cli.rs
expression: output
---
#chromosome	begin	chromosome2	end	pe_orientation	sv_type	carriers	carriers_het	carriers_hom	carriers_hemi
1	586411	1	586439	3to5	DEL	3	3	0	0

